인덱스 수정

--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!DOCTYPE html>
-<html> </html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GitHub을 이용한 배포</title>
+</head>
+<body>
+  나의 첫 배포 실습 ...
+</body>
+</html>
